TASK-15 - validate if user is already registered to given course. Make error response structure more generic (#13)
