# infrastructure/contract/openapi.yaml
@@ -3,34 +3,32 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:8080
-    description: Generated server url
+- url: http://localhost:8080
+  description: Generated server url
 paths:
   /students:
     get:
       tags:
-        - students-controller
+      - students-controller
       operationId: getAll
       parameters:
-        - name: course
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: notRegisteredToAnyCourse
-          in: query
-          required: false
-          schema:
-            type: boolean
+      - name: course
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: notRegisteredToAnyCourse
+        in: query
+        required: false
+        schema:
+          type: boolean
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -42,7 +40,7 @@ paths:
                   $ref: '#/components/schemas/Student'
     post:
       tags:
-        - students-controller
+      - students-controller
       operationId: create
       requestBody:
         content:
@@ -56,9 +54,7 @@ paths:
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -68,28 +64,26 @@ paths:
   /courses:
     get:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: getAll_1
       parameters:
-        - name: student
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: withoutAnyStudent
-          in: query
-          required: false
-          schema:
-            type: boolean
+      - name: student
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: withoutAnyStudent
+        in: query
+        required: false
+        schema:
+          type: boolean
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -101,7 +95,7 @@ paths:
                   $ref: '#/components/schemas/Course'
     post:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: create_1
       requestBody:
         content:
@@ -115,26 +109,24 @@ paths:
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Course'
+                type: object
   /courses/{uuid}/register:
     post:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: register
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       requestBody:
         content:
           application/json:
@@ -147,9 +139,7 @@ paths:
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -159,23 +149,21 @@ paths:
   /students/{uuid}:
     get:
       tags:
-        - students-controller
+      - students-controller
       operationId: getOne
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -184,23 +172,21 @@ paths:
                 $ref: '#/components/schemas/Student'
     delete:
       tags:
-        - students-controller
+      - students-controller
       operationId: delete
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -210,23 +196,21 @@ paths:
   /students/{uuid}/courses:
     get:
       tags:
-        - students-controller
+      - students-controller
       operationId: courses
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -239,23 +223,21 @@ paths:
   /courses/{uuid}:
     get:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: getOne_1
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -264,23 +246,21 @@ paths:
                 $ref: '#/components/schemas/Course'
     delete:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: delete_1
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -290,23 +270,21 @@ paths:
   /courses/{uuid}/students:
     get:
       tags:
-        - courses-controller
+      - courses-controller
       operationId: students
       parameters:
-        - name: uuid
-          in: path
-          required: true
-          schema:
-            type: string
+      - name: uuid
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "400":
           description: Bad Request
           content:
             '*/*':
               schema:
-                type: object
-                additionalProperties:
-                  type: string
+                $ref: '#/components/schemas/Errors'
         "200":
           description: OK
           content:
@@ -318,6 +296,13 @@ paths:
                   $ref: '#/components/schemas/Student'
 components:
   schemas:
+    Errors:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            type: string
     NewStudent:
       type: object
       properties:
@@ -330,15 +315,6 @@ components:
     NewCourse:
       type: object
       properties:
-        name:
-          type: string
-        code:
-          type: string
-    Course:
-      type: object
-      properties:
-        uuid:
-          type: string
         name:
           type: string
         code:
@@ -358,4 +334,13 @@ components:
         personalId:
           type: string
         uuid:
+          type: string
+    Course:
+      type: object
+      properties:
+        uuid:
+          type: string
+        name:
+          type: string
+        code:
           type: string
